--- a/src/java.base/share/classes/jdk/internal/misc/X-ScopedMemoryAccess.java.template
+++ b/src/java.base/share/classes/jdk/internal/misc/X-ScopedMemoryAccess.java.template
@@ -52,6 +52,10 @@ public class ScopedMemoryAccess {
 
     public interface Scope {
         void checkValidState();
+
+        class ScopedAccessException extends RuntimeException {
+            static final long serialVersionUID = 1L;
+        }
     }
 
     @Target({ElementType.METHOD, ElementType.CONSTRUCTOR})
